Modify CORS configuration